--- a/src/nbproject/private/private.properties
+++ b/src/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=C:/Users/doann/OneDrive/Belgeler/servers/glassfish6/glassfish
 j2ee.server.home=C:/Users/doann/OneDrive/Belgeler/servers/glassfish6/glassfish
 j2ee.server.instance=[C:\\Users\\doann\\OneDrive\\Belgeler\\servers\\glassfish6\\glassfish;C:\\Users\\doann\\OneDrive\\Belgeler\\servers\\glassfish6\\glassfish\\domains\\domain1]deployer:gfv610ee9:localhost:4848
 j2ee.server.middleware=C:/Users/doann/OneDrive/Belgeler/servers/glassfish6
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\doann\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
